--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Business::OnlinePayment::PayflowPro.
 
+0.02  Thu Oct  7 15:58:44 PDT 2004
+	- sponsored by Pro Softnet Corp. / ibackup.com:
+	  - cvv2 support
+	  - authorization only, post authorization, void and credit support
+	- patch from Robert Graff <rgraff@workingdemo.com> for credits
+
 0.01  Wed Jan 22 02:47:25 PST 2003
 	- original version; created by ivan 1.0
 
