--- a/Changes
+++ b/Changes
@@ -1,5 +1,59 @@
 Revision history for Perl extension Business::OnlinePayment::PayflowPro.
 
+0.07  
+	[0.07_06 Sat Oct 18 14:15:03 EDT 2008] plobbes
+	- include most of the patches from Frédéric Brière at fbriere.net
+	- request_id now only generates a new id when not set
+	- cvv2_code brought back for backwards compatibility
+	- client_certification_id now default to "ClientCertificationIdNotSet"
+	- client_timeout set to 45 by default
+	- several doc updates and some reorg
+	[0.07_05 Wed Apr  4 12:56:57 PDT 2007] ivan
+	- add note about inteface & contacting payflowintegrator@paypal.com
+	[0.07_04 Tue Mar 13 18:26:12 EDT 2007] ivan
+	- ripped out a bunch of hastily-conceived ->param BS more appropriate
+	  for implementation in a base class.  Server names were incorrect.
+	  Tests were broken (some specific to a particular account).
+	- depend on B:OP:HTTPS 0.06 for Crypt::SSLeay fixes
+	[0.07_03 Tue Mar 13 18:26:12 EDT 2007] plobbes
+	- add "shortcut" param 'client_certification_id' (can be
+	  passed as an argument for B::OP->new() which will set the
+	  X-VPS-VIT-CLIENT-CERTIFICATION-ID header
+	[0.07_02 Tue Mar 13 12:32:57 EDT 2007] plobbes
+	- made generic method for deprecating cert_path, etc.
+	- doc'd vendor() and partner() as deprecated but will not put
+	  out warnings on those (B::OP new() behavior would make this annoying)
+	- shortened code for the custom methods (we are not using build_subs())
+	- use path() again as "/commit" is not needed/used by PayflowPro HTTPS
+	- removed code in submit() related to "/commit"
+	- set param("test_server") so the test server name can be changed
+	[0.07_01 Mon Mar 12 01:56:58 EDT 2007] plobbes
+	- rewrite/updates for new B::OP::PayflowPro using HTTP protocol
+	- no longer using PFProAPI.pm (from Verisign/PayPal)
+	- cert_path() is now deprecated
+	- rewrite/updates for new B::OP::PayflowPro using HTTP protocol
+	- no longer use PFProAPI.pm from Verisign/PayPal
+	- now using name-value pair transactions
+	- require: CGI to parse name-value pair responses from server
+	- require: Digest::MD5 to generate (hopefully) unique
+	  request_id which is required by PayflowPro HTTP protocol
+	- new methods: request_id(), param(), debug(), expdate_mmyy()
+	- renamed internal methods to start with an underscore
+	- removed unused remap_fields() method
+	- if unable to parse expiration given in %content no longer croak,
+	  but let PayflowPro servers attempt to deal with the value as-is
+	- submit() now two phased per PFP HTTP protocol
+	- X-VPS-VIT-CLIENT-CERTIFICATION-ID is required (supposedly
+	  this is a temporary requirement from PayPal)
+	- request_id() method will generate a hopefully unique id using
+	  Digest::MD5 for use in the X-VPS-REQUEST-ID HTTP header.  A
+	  'request_id' key may be passed in %content to specify an ID
+	- path() is not used as the PFP HTTP protocol uses two
+	  different URLs (step 1) /transaction, (step 2) /commit
+	- patches to B::OP::HTTPS were required to support needed
+	  functionality
+	- debug() sets $Business::OnlinePayment::HTTPS::DEBUG for debugging
+
 0.06  Thu Mar  1 10:01:33 EST 2007
 	- zip now allows alphanumerics for non-US zips
 
