--- a/Changes
+++ b/Changes
@@ -1,5 +1,22 @@
 Revision history for Perl extension Business::OnlinePayment::PayflowPro.
 
+1.00  Sat Aug 22 01:13:34 EDT 2009 plobbes
+	- bump version to 1.00, should have probably done this with
+	  0.07 as it was a radical enough departure from 0.06, also
+	  BOP 3.x is no longer just a developers release
+	- rt.cpan.org#48696 Use CGI::Util instead of CGI
+	  Josh Rosenbaum
+	  + updated code to be faster/more efficient
+	- rt.cpan.org#48816 Request Encoding Issue & Missing fields
+	  Josh Rosenbaum
+	  + use PayPal custom encoding (not URL encoding) per PP spec
+	  + added missing shipping parameters similar to Authorize.Net
+	- rt.cpan.org#48820 %content not reloaded after mapping breaks credits
+	  Josh Rosenbaum
+	  + fix a problem with credits where the ACCT, AMT, and
+	    EXPDATE were being required, because the ORIGID detection
+	    code was not working
+
 0.07  Tue Apr 14 13:49:50 EDT 2009 plobbes
 	- update server names per latest PayPal docs:
 	   payflow.verisign.com => payflowpro.verisign.com
